<resources>
    <string name="app_name">Regeneration 2021</string>
    <string name="main_hello_world">Hello World!</string>

    <string name="login_linear_title">Login to your account</string>
    <string name="login_linear_forgot">Forgot your password?</string>
    <string name="login_linear_btn">Login</string>
    <string name="login_linear_edit_username">Email Address</string>
    <string name="login_linear_edit_password">Password</string>
    <string name="demo_with_arg">My name is %1$s %2$d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string-array name="array_menu">
        <item>@string/menu_home</item>
    </string-array>

    <plurals name="counter">
        <item quantity="zero">Empty List</item>
        <item quantity="one">You have 1 item</item>
        <item quantity="other"> You have many items</item>
    </plurals>

    <string name="btn_increase_label">Add</string>
</resources>